tests/fixtures/valid/control_flow.lnge
fn abs(x: i32) -> i32 {
    if x < 0 {
        return -x;
    } else {
        return x;
    }
}

fn main() -> i32 {
    return abs(-7);
}
