tests/fixtures/invalid/type_mismatch.lnge
fn main() -> i32 {
    x : i32 = true;
    return x;
}
